--- a/app/views/machines/edit.html.erb
+++ b/app/views/machines/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Machine</h1>
+<h1>Edit Machine</h1>
 
 <%= render 'form', machine: @machine %>
-
-<%= link_to 'Show', @machine %> |
-<%= link_to 'Back', machines_path %>
