--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -1,41 +1,50 @@
-<h1>Machines</h1>
-<!-- <p>Find me in app/views/machines/index.html.erb</p> -->
-<table>
-	<thead>
-		<tr>
-			<th>Name</th>
-			<th>MAC</th>
-			<th>CPU</th>
-			<th>RAM</th>
-			<th>HDD</th>
-			<th>Optical drive</th>
-			<th>OS</th>
-			<th>Purchase date</th>
-			<th colspan="3"></th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @machines.each do |machine| %>
-		<tr>
-			<td><%= machine.name %></td>
-			<td><%= machine.mac %></td>
-			<td><%= machine.cpu %></td>
-			<td><%= machine.ram %></td>
-			<td><%= machine.hdd %></td>
-			<td><%= machine.optical_drive %></td>
-			<td><%= machine.os %></td>
-			<td><%= machine.purchase_date %></td>
-			<td>
-                <%= link_to 'Show', machine %>
-            </td>
-            <td>
-                <%= link_to 'Edit', edit_machine_path(machine) %>
-            </td>
-            <td>
-                <%= link_to 'Destroy', machine, method: :delete, data: { confirm: 'Are you sure?' } %>
-            </td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
-<%= link_to 'New Machines', new_machine_path %>
+<div class="panel panel-default">	
+    <div class="panel-heading no-print"> 
+    	<div class="btn-group">
+    		<%= link_to 'Add Machine', new_machine_url, class: 'btn btn-default btn-sm'  %>
+    	</div>    		    	 
+    </div>
+	<div class="panel-body">
+		<div id="DataTables_Table_0_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+			
+			<div class="table-responsive">			
+	            <table class="table table-striped">
+	            	<thead>
+	            		<tr role="row">
+	            			<th><%= sort_link @q, :name %></th>
+							<th>MAC</th>
+							<th>CPU</th>
+							<th>RAM</th>
+							<th>HDD</th>
+							<th>Optical drive</th>
+							<th>OS</th>
+							<th>Purchase date</th>
+							<th>Actions</th>						
+	            		</tr>
+	            	</thead>
+	            	<tbody>
+						<% @machines.each do |machine| %>
+							<tr>
+								<td><%= machine.name %></td>
+								<td><%= machine.mac %></td>
+								<td><%= machine.cpu %></td>
+								<td><%= machine.ram %></td>
+								<td><%= machine.hdd %></td>
+								<td><%= machine.optical_drive %></td>
+								<td><%= machine.os %></td>
+								<td><%= machine.purchase_date %></td>
+								<td>
+									<%= link_to 'Show', machine,class: 'btn btn-xs btn-default' %>
+					            	<%= link_to 'Edit', edit_machine_path(machine), class: 'btn btn-xs btn-default'%>
+					                <%= link_to 'Destroy', machine, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-warning' %>
+					            </td>
+							</tr>
+						<% end %>
+					</tbody>
+	            </table>
+			</div>
+		</div>
+	</div>
+</div>	
+
+ 
