--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,33 +1,41 @@
-<p id="notice"><%= notice %></p>
+<div class="panel panel-default"> 
+    <div class="panel-heading no-print"> 
+      <div class="btn-group">
+        <%= link_to 'Add People', new_person_url, class: 'btn btn-default btn-sm'  %>
+      </div>               
+    </div>
+  <div class="panel-body">
+    <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+      
+      <div class="table-responsive">      
+        <table class="table table-striped">
+          <thead>
+            <tr role="row">
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Designation</th>
+               <th>Organization</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @people.each do |person| %>
+              <tr>
+                <td><%= person.name %></td>
+                <td><%= person.phone %></td>
+                <td><%= person.designation %></td>
+                <td><%= person.organization %></td>
+                <td>
+                  <%= link_to 'Show', person,class: 'btn btn-xs btn-default' %>
+                  <%= link_to 'Edit', edit_person_path(person), class: 'btn btn-xs btn-default'%>
+                  <%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-warning' %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>  
 
-<h1>People</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Phone</th>
-      <th>Designation</th>
-      <th>Organization</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @people.each do |person| %>
-      <tr>
-        <td><%= person.name %></td>
-        <td><%= person.phone %></td>
-        <td><%= person.designation %></td>
-        <td><%= person.organization %></td>
-        <td><%= link_to 'Show', person %></td>
-        <td><%= link_to 'Edit', edit_person_path(person) %></td>
-        <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Person', new_person_path %>
+ 
