--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -1,46 +1,33 @@
-<%= form_with(model: contract, local: true) do |form| %>
-<% if contract.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(contract.errors.count, "error") %> prohibited this contract from being saved:</h2>
-
-      <ul>
-      <% contract.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class="panl panel-default">
+    <div class="panel-heading no-print">
+        <div class="btn-group"></div>
     </div>
-  <% end %>
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.date_select :date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :people_id %>
-    <%= form.text_field :people_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :service_from %>
-    <%= form.date_select :service_from %>
-  </div>
-
-  <div class="field">
-    <%= form.label :service_to %>
-    <%= form.date_select :service_to %>
-  </div>
-
-  <div class="field">
-    <%= form.label :preferred_date %>
-    <%= form.text_field :preferred_date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :preferred_time %>
-    <%= form.text_field :preferred_time %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+    <div class="panel-body panel-form">
+        <%= simple_form_for @contract, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |form| %>
+            <% if contract.errors.any? %>
+            <div id="error_explanation">
+                <h2>
+                    <%= pluralize(contract.errors.count, "error") %> prohibited this contract from being saved:</h2>
+                <ul>
+                    <% contract.errors.full_messages.each do |message| %>
+                    <li>
+                        <%= message %>
+                    </li>
+                    <% end %>
+                </ul>
+            </div>
+            <% end %>
+            <%= form.input :dated, as: :string, input_html: {class: 'datepicker'} %>
+            <%= form.input :person_id, label: 'Contract Person' do %>
+                <%=form.select :person_id, Person.all.map { |p| [p.name + "__"+p.phone, p.id]}, {},{class: 'form-control string optional'} %>
+            <% end %>
+            <%= form.input :service_from, as: :string, input_html: {class: 'datepicker'} %>
+            <%= form.input :service_to, as: :string, input_html: {class: 'datepicker'} %>
+            <%= form.input :preferred_date, placeholder: 'Mon,Tue' %>
+            <%= form.input :preferred_time, placeholder: '9:00AM to 4:00PM' %>
+            <%= link_to 'Back', contracts_path, class: 'col-sm-offset-3 btn btn-default' %>
+            <%= form.button :submit, class: 'btn btn-primary' %>
+        <% end %>
+    </div>
+    <!-- </div> -->
+    <!-- </div>
