--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,36 +1,44 @@
-<h1>Contracts</h1>
-<table>
-	<thead>
-		<tr>
-			<th>Dated</th>
-			<!-- <th>Contact person</th> -->
-			<!-- <th>Phone number</th> -->
-			<th>People</th>
-			<th>Service from</th>
-			<th>Service to</th>
-			<th>Preferred date</th>
-			<th>Preferred time</th>
-			<th colspan="3"></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<% @contracts.each do |contract| %>
-			<td><%= contract.date %></td>
-			<td><%= contract.people %></td>
-			<td><%= contract.service_from %></td>
-			<td><%= contract.service_to %></td>
-			<td><%= contract.preferred_date %></td>
-			<td><%= contract.preferred_time %></td>
-			<td><%= link_to 'Show', contract %></td>
-			<td>
-                <%= link_to 'Edit', edit_contract_path(contract) %>
-            </td>
-            <td>
-                <%= link_to 'Destroy', contract, method: :delete, data: { confirm: 'Are you sure?' } %>
-            </td>
-			<% end %>
-		</tr>
-	</tbody>
-</table>
-<%= link_to 'New', new_contract_path %>
+<!-- <h1>Organization</h1> -->
+<div class="panel panel-default">
+    <div class="panel-heading no-print">
+        <div class="btn-group">
+            <%= link_to 'Add Contract', new_contract_url, class: 'btn btn-default btn-sm' %>
+        </div>
+    </div>
+    <div class="panel-body">
+        <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr role="row">
+                            <th>Date</th>
+                            <th>Contract person</th>
+                            <th>Service from</th>
+                            <th>Service to</th>
+                            <th>Preferred day</th>
+                            <th>Preferred time</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @contracts.each do |contract| %>
+                            <tr>
+                                <td><%= contract.dated %></td>
+                                <td><%= contract.person.name %></td>
+                                <td><%= contract.service_from %></td>
+                                <td><%= contract.service_to %></td>
+                                <td><%= contract.preferred_date %></td>
+                                <td><%= contract.preferred_time %></td>
+                                <td>
+                                        <%= link_to 'Show', contract,class: 'btn btn-xs btn-default' %>
+                                        <%= link_to 'Edit', edit_contract_path(contract), class: 'btn btn-xs btn-default'%>
+                                        <%= link_to 'Destroy', contract, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-warning' %>
+                                    </td>
+                            </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
