--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -13,6 +13,9 @@
             <li>
                 <%= link_to 'People', people_url %>
             </li>
+            <li>
+                <%= link_to 'Contract', contracts_url %>
+            </li>
         </ul>
         <!-- <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2"> -->
         <ul class="nav navbar-nav navbar-right">
