--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <header>
       <%= render 'layouts/menu' %>
     </header>
+    <%= render 'template/alert' %>
     <%= yield %>
   </body>
 </html>
