--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -16,6 +16,9 @@
             <li>
                 <%= link_to 'Contract', contracts_url %>
             </li>
+            <li>
+                <%= link_to 'Ms-Log', mslogs_url %>
+            </li>
         </ul>
         <!-- <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2"> -->
         <ul class="nav navbar-nav navbar-right">
