--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -15,6 +15,7 @@
               <th>Phone</th>
               <th>Designation</th>
                <th>Organization</th>
+               <th>Actions</th>
             </tr>
           </thead>
           <tbody>
