Adding svclog and maintain some

--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,5 +1,6 @@
+<p id="notice"><%= notice %></p>
 <div class="panel panel-default">
-	<div class="panel panel-header">
+	<div class="panel-heading">
 		Contract details
 	</div>
 	<div class="panel panel-body">
