--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -1,33 +1,62 @@
-<div class="panl panel-default">
-    <div class="panel-heading no-print">
-        <div class="btn-group"></div>
-    </div>
-    <div class="panel-body panel-form">
-        <%= simple_form_for @contract, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |form| %>
-            <% if contract.errors.any? %>
-            <div id="error_explanation">
-                <h2>
-                    <%= pluralize(contract.errors.count, "error") %> prohibited this contract from being saved:</h2>
-                <ul>
-                    <% contract.errors.full_messages.each do |message| %>
-                    <li>
-                        <%= message %>
-                    </li>
+<div class="container-fluid">
+<%= simple_form_for @contract, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |f| %>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <%= link_to 'Contract Details', contracts_path, class: 'btn btn-default' %>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-8">
+                    <%= f.input :dated, as: :string, input_html: {class: 'datepicker'} %>
+                    <%= f.input :person_id, label: 'Contract Person' do %>
+                        <%=f.select :person_id, Person.all.map { |p| [p.name + "~>" + "Ph-" +p.phone , p.id]}, {},{class: 'form-control string optional'} %>
                     <% end %>
-                </ul>
+                    <%= f.input :service_from, as: :string, input_html: {class: 'datepicker'} %>
+                    <%= f.input :service_to, as: :string, input_html: {class: 'datepicker'} %>
+                    <%= f.input :preferred_date, placeholder: 'Mon,Tue' %>
+                    <%= f.input :preferred_time, placeholder: '9:00AM to 4:00PM' %>
+                </div>
             </div>
-            <% end %>
-            <%= form.input :dated, as: :string, input_html: {class: 'datepicker'} %>
-            <%= form.input :person_id, label: 'Contract Person' do %>
-                <%=form.select :person_id, Person.all.map { |p| [p.name + "("+p.phone+")", p.id]}, {},{class: 'form-control string optional'} %>
-            <% end %>
-            <%= form.input :service_from, as: :string, input_html: {class: 'datepicker'} %>
-            <%= form.input :service_to, as: :string, input_html: {class: 'datepicker'} %>
-            <%= form.input :preferred_date, placeholder: 'Mon,Tue' %>
-            <%= form.input :preferred_time, placeholder: '9:00AM to 4:00PM' %>
-            <%= link_to 'Back', contracts_path, class: 'col-sm-offset-3 btn btn-default' %>
-            <%= form.button :submit, class: 'btn btn-primary' %>
-        <% end %>
+            <h3>List of computers for maintenance</h3>
+            <div id='cms'>
+                <table class="table table-input table-condensed" >
+                    <thead>
+                        <tr>
+                            <th>...</th>
+                            <th>Serial</th>
+                            <th>Name</th>
+                            <th>Mac</th>
+                            <th>CPU</th>
+                            <th>RAM</th>
+                            <th>HDD</th>
+                            <th>Optical drive</th>
+                            <th>OS</th>
+                            <th>Purchase date</th>
+                        </tr>
+                    </thead>
+                    <tbody id="items-table-body">
+                        <%= f.simple_fields_for :cms do |cm| %>
+                            <%= render 'cm_fields', :f => cm %>
+                        <% end %>
+                        <%= link_to_add_association f, :cms, { 'data-association-insertion-node': 'tbody#items-table-body', 'data-association-insertion-method': 'append', class: 'btn btn-sm btn-default'} do %>
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true">
+                        </span>
+                        <% end %>
+                    </tbody>
+                </table>
+            </div>
+            <!-- <div class="row">
+                <div class="col-md-6">
+                    <h3>Service receiver</h3>
+                    <div class="form-group">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h3>Service provider</h3>
+                </div>
+            </div> -->
+            <%= f.button :submit, class: 'btn btn-primary' %>
+        </div>
     </div>
-    <!-- </div> -->
-    <!-- </div>
+<% end %>
+</div>
