--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ServiceLogForm</title>
+    <title>Facil Bilden</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <%= favicon_link_tag '/favicon.ico' %>
   </head>
-
   <body>
     <header>
-      <%= render 'layouts/menu' %>
+      <%= render partial: 'layouts/menu' %>
     </header>
     <%= render 'template/alert' %>
     <%= yield %>
