--- a/app/views/svclogs/_form.html.erb
+++ b/app/views/svclogs/_form.html.erb
@@ -1,24 +1,48 @@
-<%= simple_form_for @svclog, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |form| %>
-            <% if svclog.errors.any? %>
-            <div id="error_explanation">
-                <h2>
-                    <%= pluralize(svclog.errors.count, "error") %> prohibited this svclog from being saved:</h2>
-                <ul>
-                    <% svclog.errors.full_messages.each do |message| %>
-                    <li>
-                        <%= message %>
-                    </li>
+<%= simple_form_for @svclog, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |f| %>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <!-- <div class="btn btn-group"> -->
+                <%= link_to 'Service log details', svclogs_path, class: 'btn btn-default' %>
+            <!-- </div> -->
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-8">
+                    <%= f.input :organization_id, label: 'Office' do %>
+                        <%=f.select :organization_id, Organization.all.map { |p| [p.name, p.id]}, {},{class: 'form-control string optional'} %>
                     <% end %>
-                </ul>
+                    <%= f.input :department%>
+                    <%= f.input :location %>
+                    
+                </div>
             </div>
-            <% end %>
-            <div class="col-sm-8">
-                <%= form.input :organization_id, label: '' do %>
-                <%=form.select :organization_id, Organization.all.map { |p| [p.name, p.id]}, {},{class: 'form-control string optional'} %>
-                <% end %>
-            <%= form.input :department%>
-            <%= form.input :location %>
-            <%= link_to 'Back', svclogs_path, class: 'col-sm-offset-3 btn btn-default' %>
-            <%= form.button :submit, class: 'btn btn-primary' %>
+            <div id="svms">
+                <table class="table table-input table-condensed" >
+                    <col width="20px">
+                    <col width="20px">
+                    <col width="120px">
+                    <col width="120px">
+                    <col width="60px">
+                    <thead>
+                        <tr>
+                            <th>...</th>
+                            <th>Serial</th>
+                            <th>Date</th>
+                            <th>Computer Name-MAC</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody id="items-table-body">
+                        <%= f.simple_fields_for :svms do |svm| %>
+                            <%= render 'svm_fields', :f => svm %>
+                        <% end %>
+                        <%= link_to_add_association f, :svms, { 'data-association-insertion-node': 'tbody#items-table-body', 'data-association-insertion-method': 'append', class: 'btn btn-sm btn-default'} do %>
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        <% end %>
+                    </tbody>
+                </table>
             </div>
-        <% end %>
+            <%= f.button :submit, class: 'btn btn-primary' %>
+        </div>
+    </div>
+<% end %>
