--- a/app/views/svclogs/index.html.erb
+++ b/app/views/svclogs/index.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="panel-body">
         <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
-            <div class="table-responsive col-sm-8">
+            <div class="table-responsive ">
                 <table class="table table-striped">
                     <thead>
                         <tr role="row">
