Add service receiver and provider

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,9 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
+
+
+ // *= require selectize
+ // *= require selectize.default
+//  @import 'selectize'
+// @import 'selectize.bootstrap3'
