--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -23,7 +23,7 @@
                         <% @contracts.each do |contract| %>
                             <tr>
                                 <td><%= contract.dated %></td>
-                                <td><%= contract.person.name %></td>
+                                <td><%= contract.contact_person.name %></td>
                                 <td><%= contract.service_from %></td>
                                 <td><%= contract.service_to %></td>
                                 <td><%= contract.preferred_date %></td>
