--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,9 +1,9 @@
-<div class="panl panel-default">
+<!-- <div class="panl panel-default">
     <div class="panel-heading no-print">
         <div class="btn-group"></div>
     </div>
-    <div class="panel-body panel-form">
-        <%= simple_form_for person, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |form| %>
+    <div class="panel-body panel-form"> -->
+        <%= simple_form_for person, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |f| %>
             <% if person.errors.any? %>
             <div id="error_explanation">
                 <h2>
@@ -17,13 +17,13 @@
                 </ul>
             </div>
             <% end %>
-            <%= form.input :name, placeholder: 'U Mya' %>
-            <%= form.input :phone, label: 'Phone' %>
-            <%= form.input :designation %>
-            <%= form.input :organization %>            
+            <%= f.input :name, placeholder: 'U Mya' %>
+            <%= f.input :phone, label: 'Phone', placeholder: '09-123456789' %>
+            <%= f.input :designation %>
+            <%= f.input :organization %>            
             <%= link_to 'Back', people_path, class: 'col-sm-offset-3 btn btn-default' %>
-            <%= form.button :submit, class: 'btn btn-primary' %>
+            <%= f.button :submit, class: 'btn btn-primary' %>
         <% end %>        
-    </div>
+    <!-- </div>
 </div>
-</div>
+</div> -->
