--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,57 +1,1 @@
-<%= simple_form_for @contract, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |f| %>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <div class="btn btn-group">
-            	<%= link_to 'Contract Details', contracts_path, class: 'btn btn-default' %>
-            </div>
-        </div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-md-8">
-                    <%= f.input :dated, as: :string, input_html: {class: 'datepicker'} %>
-                    <%= f.input :person_id, label: 'Contract Person' do %>
-                        <%=f.select :person_id, Person.all.map { |p| [p.name + "~>" + "Ph-" +p.phone , p.id]}, {},{class: 'form-control string optional'} %>
-                    <% end %>
-                    <%= f.input :service_from, as: :string, input_html: {class: 'datepicker'} %>
-                    <%= f.input :service_to, as: :string, input_html: {class: 'datepicker'} %>
-                    <%= f.input :preferred_date, placeholder: 'Mon,Tue' %>
-                    <%= f.input :preferred_time, placeholder: '9:00AM to 4:00PM' %>
-                </div>
-            </div>
-            <h3>List of computers for maintenance</h3>
-            <div id='cms'>
-                <table class="table table-input table-condensed" >
-                    <col width="20px">
-                    <col width="20px">
-                    <col width="120px">
-                    <col width="120px">
-                    <col width="60px">
-                    <col width="60px">
-                    <col width="120px">
-                    <col width="120px">
-                    <col width="120px">
-                    <thead>
-                        <tr>
-                            <th>...</th>
-                            <th>Serial</th>
-                            <th>Name</th>
-                            <th>Mac</th>
-                            <th>CPU</th>
-                            <th>RAM</th>
-                            <th>HDD</th>
-                            <th>Optical drive</th>
-                            <th>OS</th>
-                            <th>Purchase date</th>
-                        </tr>
-                    </thead>
-                    <tbody id="items-table-body">
-                        <%= f.simple_fields_for :cms do |cm| %>
-                            <%= render 'cm_fields', :f => cm %>
-                        <% end %>
-                        
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-<% end %>
+<%= render 'form', contract: @contract  %>
