--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -38,7 +38,7 @@
             </ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
-              <%= link_to "Log Out", destroy_user_session_url, method: :delete %>
+              <%#= link_to "Log Out", destroy_user_session_url, method: :delete %>
             </li>            
         </ul>
         </div>
