--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,29 +1,9 @@
-<div class="panel panel-default">
-	<div class="panel panel-heading">
-		People
-	</div>
-	<div class="panel panel-body">
-		<p>
-  		<strong>Name:</strong>
-  		<%= @person.name %>
-		</p>
-
-		<p>
-		  <strong>Phone:</strong>
-		  <%= @person.phone %>
-		</p>
-
-		<p>
-		  <strong>Designation:</strong>
-		  <%= @person.designation %>
-		</p>
-
-		<p>
-		  <strong>Organization:</strong>
-		  <%= @person.organization %>
-		</p>
-	</div>
-	<div class="panel panel-footer">
-		<%= link_to 'People', people_url, class: 'btn btn-default' %>
-	</div>
+<div class="col-md-6 text-nowarp">
+	<%= simple_form_for @person, html: {class: 'from-horizontal'}, wrapper: :horizontal_form do |f| %>
+	    <%= f.input :name, placeholder: 'U Mya' %>
+	    <%= f.input :phone, label: 'Phone' %>
+	    <%= f.input :designation %>
+	    <%= f.input :organization %>            
+	    <%= link_to 'Back', people_path, class: 'col-sm-offset-3 btn btn-default' %>
+	<% end %>
 </div>
